# rubigo

./: .aiexclude  .gitignore  README.md  docker-compose.vdi.yml  rubigo-react.service
blender-agent/: .gitignore  README.md  deploy_extension.py  mcp_client.py  pyproject.toml  reposition.py  restart_blender.py  seed_skills.py  test_executor.py
blender-agent/.agent/workflows/: blender.md
blender-agent/src/blender_addon/: __init__.py  blender_manifest.toml
blender-agent/src/blender_agent/: __init__.py  blender_client.py  protocol.py  server.py  skill_executor.py  skills.py
blender-agent/tests/: conftest.py  test_server.py
rubigo-leptos/: .gitignore  AGENTS.md  Cargo.toml  Event Organizers and Participants.md  Leptos Refactor_ Build UI.md  create_geoviz.py  dev.sh  e2e-test.sh  filter_cities.py  kill_dev.sh  prod.sh  refactor.sh  report.md  showcase.sh  tauri-dev.sh  tauri-prod.sh  test_components.sh  validate_ui.sh  verification_map.html
rubigo-leptos/.agent/workflows/: concurrent-ui-dev.md
rubigo-leptos/blender/: Catalyst_9500-48X.blend  Catalyst_9500-48X_v2.blend  Catalyst_9500-48X_v3.blend  Catalyst_9500-48X_v4.blend  Catalyst_9500-48X_v5.blend  Catalyst_9500-48X_v6.blend  Catalyst_9500-48X_v7.blend  Catalyst_9500-48X_v8.blend  Catalyst_9500-48X_v9.blend  geospatial.blend
rubigo-leptos/crates/action-handlers/: Cargo.toml
rubigo-leptos/crates/actions/: Cargo.toml
rubigo-leptos/crates/bevy-viewer/: Cargo.toml
rubigo-leptos/crates/db/: Cargo.toml
rubigo-leptos/crates/scenario-loader/: Cargo.toml
rubigo-leptos/crates/ui-app/: Cargo.toml  Trunk.toml  index.html
rubigo-leptos/crates/ui-core/: Cargo.toml
rubigo-leptos/crates/ui-showcase/: Cargo.toml  Trunk.toml  index.html
rubigo-leptos/earth-viewer/: Cargo.toml
rubigo-leptos/earth-viewer/src/: main.rs
rubigo-leptos/gui-server/: Cargo.toml
rubigo-leptos/gui-server/assets/: script.js  style.css
rubigo-leptos/gui-server/src/: api.rs  app.rs  cached_geo.rs  main.rs
rubigo-leptos/gui-tauri/src/: app-144aed900a32d476.css  app.js  components.css  index.html  styles.css  ui-app-31fc75ead3217cce.js
rubigo-leptos/gui-tauri/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.dev.json  tauri.dev.tmp.json
rubigo-leptos/nexosim-guest/: Cargo.toml
rubigo-leptos/nexosim-guest/src/: lib.rs
rubigo-leptos/nexosim-hybrid/: Cargo.toml  build.rs
rubigo-leptos/nexosim-hybrid/src/: config.rs  generator.rs  lib.rs  main.rs  metalog.rs  model.rs  simulation.rs  telemetry.rs  wasm.rs
rubigo-leptos/nexosim-hybrid/tests/: personnel_location_test.rs
rubigo-leptos/router-wasm/: Cargo.toml
rubigo-leptos/router-wasm/src/: lib.rs
rubigo-leptos/scenarios/mmc/: assets.toml  infrastructure.toml  personnel.toml  scenario.toml  sites.toml
rubigo-leptos/scripts/: create_globe_mesh.py  create_simple_globe.py  export_simple_globe.py  render_bevy_preview.py  render_expected_globe.py
rubigo-leptos/ui-tests/: check_pixels.js  console_capture.js  console_capture2.js  package.json  playwright.config.ts  tsconfig.json
rubigo-leptos/ui-tests/tests/: calendar.spec.ts  components.spec.ts  connections.spec.ts  globe.spec.ts  persona_switcher.spec.ts  personnel.spec.ts  refactor.spec.ts  simulation.spec.ts  sites.spec.ts  smoke.spec.ts
rubigo-v3/: .buildstamp  .gitignore  Cargo.toml  build.rs  justfile  rubigo.toml
rubigo-v3/.agent/workflows/: v3-comp.md
rubigo-v3/backend/: Cargo.toml
rubigo-v3/backend/src/: main.rs
rubigo-v3/components-rs/components/: Cargo.toml  build.rs
rubigo-v3/components-ts/: bunfig.toml  index.ts  package.json  test-setup.ts  tsconfig.json  types.d.ts  vite.config.ts
rubigo-v3/components-ts/bench/: statechart.bench.ts
rubigo-v3/components-ts/button/: Button.module.css  config.ts  index.ts
rubigo-v3/components-ts/checkbox/: config.ts  index.ts
rubigo-v3/components-ts/collapsible/: Collapsible.module.css
rubigo-v3/components-ts/input/: Input.module.css  config.ts  index.ts
rubigo-v3/components-ts/select/: Select.module.css  config.ts  index.ts
rubigo-v3/components-ts/slider/: Slider.module.css  index.ts
rubigo-v3/components-ts/solid/: index.ts  useButton.ts  useCheckbox.ts  useSwitch.test.ts  useTabs.ts  useTooltip.ts
rubigo-v3/components-ts/statechart/: index.ts  machine.test.ts  machine.ts
rubigo-v3/components-ts/switch/: index.ts
rubigo-v3/components-ts/tabs/: config.ts  index.ts
rubigo-v3/components-ts/tests/: button.component.test.ts  button.hook.test.ts  button.keyboard.test.ts  checkbox.component.test.ts  checkbox.conformance.test.ts  checkbox.emit.test.ts  checkbox.hook.test.ts  collapsible.component.test.ts  collapsible.conformance.test.ts  collapsible.emit.test.ts  collapsible.keyboard.test.ts  conformance.test.ts  dialog.component.test.ts  dialog.emit.test.ts  dialog.keyboard.test.ts  input.component.test.ts  input.emit.test.ts  input.hook.test.ts  input.keyboard.test.ts  select.conformance.test.ts  select.emit.test.ts  select.keyboard.test.ts  slider.component.test.ts  slider.conformance.test.ts  slider.emit.test.ts  slider.keyboard.test.ts  switch.component.test.ts  switch.keyboard.test.ts  tabs.conformance.test.ts  tabs.emit.test.ts  togglegroup.component.test.ts  togglegroup.emit.test.ts  togglegroup.keyboard.test.ts  tooltip.component.test.ts  tooltip.conformance.test.ts  tooltip.emit.test.ts  wasm.conformance.test.ts
rubigo-v3/components-ts/togglegroup/: index.ts
rubigo-v3/components-ts/tooltip/: Tooltip.module.css  config.ts
rubigo-v3/frontend/: tsconfig.json  vite.config.ts
rubigo-v3/frontend/src/: App.tsx
rubigo-v3/gallery/backend/: Cargo.toml
rubigo-v3/gallery/frontend/: index.html  package.json  tsconfig.json  vite.config.ts
rubigo-v3/impl/ts/: index.ts  tsconfig.json  vite.config.ts
rubigo-v3/schema/: statechart.cue
rubigo-v3/scripts/: generate-examples.sh  unify-vectors.ts  validate-spec-types.sh
rubigo-v3/shared/primitives/: button.sudo.md  checkbox.sudo.md  collapsible.sudo.md  input.sudo.md  togglegroup.sudo.md
rubigo-v3/specifications/: TEMPLATE.md
rubigo-v3/src/: lib.rs
rubigo-v3/tooling/cli/: Cargo.toml
(+1094 files in other folders)
