[package]
name = "earth-viewer"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.17", default-features = false, features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_scene",
    "bevy_render",
    "bevy_winit",
    "bevy_window",
    "bevy_state",
    "bevy_mesh",
    "bevy_image",
    "bevy_light",
    "bevy_camera",
    "bevy_shader",
    "webgl2",
    "png",
    "std",
    "x11",
    "debug",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "Navigator",
    "Gpu",
] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[profile.release-wasm]
inherits = "release"
opt-level = "z"
lto = true
