[package]
name = "nexosim-hybrid"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
bytemuck = "1.24.0"
csv = "1.4.0"
enum_dispatch = "0.3.13"
geojson = "0.24.2"
nalgebra = "0.34.1"
nexosim = "0.3.4"
rand = "0.9.2"
rand_distr = "0.5.1"
serde = "1.0.228"
serde_json = "1.0.145"
surrealdb = { version = "2.4.0", features = ["kv-mem"] }
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
wasmtime = "39.0.1"
