[package]
name = "rubigo-v3-backend"
version.workspace = true
edition.workspace = true

[dependencies]
# Web framework
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

# Async
tokio.workspace = true
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = [
    "client",
    "client-legacy",
    "http1",
    "tokio",
] }
http-body-util = "0.1"

# Serialization
serde.workspace = true
serde_json.workspace = true

# Tracing
tracing.workspace = true
tracing-subscriber.workspace = true

# Mime detection for static files
mime_guess = "2"
