[package]
name = "action-handlers"
version = "0.1.0"
edition = "2021"
description = "Server-side action handlers - bridge between actions and db crate"

[dependencies]
# Action types
actions = { path = "../actions" }

# Database layer
db = { path = "../db" }

# Async
tokio = { version = "1.48", features = ["rt"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.48", features = ["rt-multi-thread", "macros"] }
