[package]
name = "actions"
version = "0.1.0"
edition = "2021"
description = "Transport-agnostic action system for Leptos applications"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-net = "0.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
