[package]
name = "bevy-viewer"
version = "0.1.0"
edition = "2021"
description = "Reusable 3D viewer library built on Bevy"

[lib]
crate-type = ["rlib"]

[dependencies]
bevy = { version = "0.17", default-features = false, features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_scene",
    "bevy_render",
    "bevy_winit",
    "bevy_window",
    "bevy_state",
    "bevy_mesh",
    "bevy_image",
    "bevy_light",
    "bevy_camera",
    "bevy_shader",
    "webgl2",
    "png",
    "std",
    "x11",
] }
log = "0.4"
geojson = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
earcutr = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
] }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"

[features]
default = ["globe"]
globe = []
