[package]
name = "db"
version = "0.1.0"
edition = "2021"
description = "Database layer for network simulation - SurrealDB with models and repositories"

[dependencies]
# Database
surrealdb = { version = "2.4.0", features = ["kv-mem"] }

# Async
tokio = { version = "1.48", features = ["fs"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Scenario data
scenario-loader = { path = "../scenario-loader" }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.48", features = ["rt-multi-thread", "macros"] }
