[package]
name = "scenario-loader"
version = "0.1.0"
edition = "2021"
description = "Loads and parses scenario TOML files for the network simulation"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
thiserror = "1.0"
base64 = { version = "0.22", optional = true }

[features]
# Embed MMC scenario at compile time (for WASM/CSR builds)
embed-mmc = ["base64"]
