[package]
name = "ui-core"
version = "0.1.0"
edition = "2021"
description = "Shared UI components for Leptos-based applications"

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
leptos_router = "0.8"
stylance = "0.5"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "KeyboardEvent",
    "EventTarget",
] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

# Stylance CLI configuration
# Run: stylance ./crates/ui-core --output-file ./crates/ui-core/styles/bundle.css
[package.metadata.stylance]
# Output bundled CSS to styles directory
output_dir = "./styles/"
# Look for CSS modules in src directory
folders = ["./src/"]
# File extensions to process
extensions = [".module.css"]
# Hash length for scoped class names
hash_len = 7
# Class name pattern
class_name_pattern = "ui-[name]-[hash]"
