[package]
name = "rubigo-v3-components"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

# Switch component - compiles to its own WASM file
[[bin]]
name = "switch"
path = "switch/src/main.rs"

# Button component
[[bin]]
name = "button"
path = "button/src/main.rs"

# Checkbox component
[[bin]]
name = "checkbox"
path = "checkbox/src/main.rs"

# Input component
[[bin]]
name = "input"
path = "input/src/main.rs"

[dependencies]
wasm-bindgen.workspace = true
serde.workspace = true
serde_json.workspace = true

[build-dependencies]
serde_json.workspace = true

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = []
console_error_panic_hook = []

# collapsible component
[[bin]]
name = "collapsible"
path = "collapsible/src/main.rs"

# dialog component
[[bin]]
name = "dialog"
path = "dialog/src/main.rs"

# select component
[[bin]]
name = "select"
path = "select/src/main.rs"

# slider component
[[bin]]
name = "slider"
path = "slider/src/main.rs"

# tabs component
[[bin]]
name = "tabs"
path = "tabs/src/main.rs"

# togglegroup component
[[bin]]
name = "togglegroup"
path = "togglegroup/src/main.rs"

# tooltip component
[[bin]]
name = "tooltip"
path = "tooltip/src/main.rs"
