[package]
name = "rubigo-cli"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "rubigo"
path = "src/bin/rubigo.rs"

[dependencies]
rubigo-build = { path = "../rubigo-build" }
cmd_lib = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
walkdir = "2"
