[package]
name = "rubigo-v3-components"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

# WASM binaries - shared/primitives components
[[bin]]
name = "switch"
path = "../shared/primitives/switch/src/wasm.rs"

[[bin]]
name = "button"
path = "../shared/primitives/button/src/wasm.rs"

[[bin]]
name = "checkbox"
path = "../shared/primitives/checkbox/src/wasm.rs"

[[bin]]
name = "input"
path = "../shared/primitives/input/src/wasm.rs"

[[bin]]
name = "collapsible"
path = "../shared/primitives/collapsible/src/wasm.rs"

[[bin]]
name = "dialog"
path = "../shared/primitives/dialog/src/wasm.rs"

[[bin]]
name = "select"
path = "../shared/primitives/select/src/wasm.rs"

[[bin]]
name = "slider"
path = "../shared/primitives/slider/src/wasm.rs"

[[bin]]
name = "tabs"
path = "../shared/primitives/tabs/src/wasm.rs"

[[bin]]
name = "togglegroup"
path = "../shared/primitives/togglegroup/src/wasm.rs"

[[bin]]
name = "tooltip"
path = "../shared/primitives/tooltip/src/wasm.rs"

[dependencies]
wasm-bindgen.workspace = true
serde.workspace = true
serde_json.workspace = true

[build-dependencies]
serde_json.workspace = true

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = []
console_error_panic_hook = []
